--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ public/uploads
 
 # Ignore application configuration
 /config/application.yml
+
+/config/database.yml
+/config/puma.rb
+/config/secrets.yml
